[project]
name = "open-geodata"
version = "23.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "pandas>=2.3.0",
    "py7zr>=1.0.0",
    "selenium>=4.33.0",
    "sidrapy>=0.1.4",
]

[dependency-groups]
dev = [
    "notebook>=7.4.3",
]
