[project]
name = "open-geodata"
version = "23.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "more-itertools>=10.7.0",
    "pandas>=2.3.0",
    "py7zr>=1.0.0",
    "selenium>=4.33.0",
    "sicar",
    "sidrapy>=0.1.4",
]

[dependency-groups]
dev = [
    "notebook>=7.4.3",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-pdf>=0.1.2",
    "pymdown-extensions>=10.15",
]

[tool.uv.sources]
sicar = { git = "https://github.com/urbanogilson/SICAR" }
