[project]
name = "open-geodata"
version = "23.0.8"
description = "Dados Espaciais do Brasil"
authors = [{ name = "michelmetran", email = "michelmetran@gmail.com" }]
keywords = ["geodata", "geoprocessamento", "github", "utility"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "more-itertools>=10.7.0",
    "pandas>=2.3.0",
    "pooch>=1.8.2",
    "py7zr>=1.0.0",
    "selenium>=4.33.0",
    # pip install git+https://github.com/urbanogilson/SICAR
    "sicar",
    "sidrapy>=0.1.4",
]

[project.urls]
#Homepage = "https://github.com/Malwarebytes/ghas-cli"
Issues = "https://github.com/michelmetran/open-geodata/issues"
Documentation = "https://open-geodata.readthedocs.io/pt/latest/"
Repository = "https://github.com/michelmetran/open-geodata"
#Changelog = "https://github.com/Malwarebytes/ghas-cli/releases"
#Funding = "https://www.malwarebytes.com/"


[dependency-groups]
dev = ["notebook>=7.4.3"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-pdf>=0.1.2",
    "pymdown-extensions>=10.15",
]

[tool.uv.sources]
sicar = { git = "https://github.com/urbanogilson/SICAR" }


[tool.uv]
package = true

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = ""

[tool.uv.build-backend.data]
data = "open_geodata/db"
